# cmpt201-coursework

lab0/: a.out
lab0/.nvim/: lab0.c.2025-09-04T18:45:01-07:00.hash  lab0.c.2025-09-04T18:45:01-07:00.nvim
lab1/: lab1  lab1.c
lab1/.nvim/: lab1.c.2025-09-14T11:47:52-07:00.hash  lab1.c.2025-09-14T11:47:52-07:00.nvim
lab2/: lab2  lab2.c
lab2/.nvim/: lab2.c.2025-09-21T00:37:32-07:00.hash  lab2.c.2025-09-21T00:37:32-07:00.nvim  lab2.c.2025-09-21T00:52:54-07:00.hash  lab2.c.2025-09-21T00:52:54-07:00.nvim  lab2.c.2025-09-21T00:53:52-07:00.hash  lab2.c.2025-09-21T00:53:52-07:00.nvim
lab3/: lab3  lab3.c
lab4/: lab4  lab4.c
lab5/: lab5  lab5.c
lab6/: CMakeLists.txt  example_2.c  lab6.c
lab7/: lab7  lab7.c
lab8/: CMakeLists.txt  lab8.c
lab8/.nvim/: CMakeLists.txt.2025-11-09T13:05:40-08:00.hash  CMakeLists.txt.2025-11-09T14:21:40-08:00.hash  CMakeLists.txt.2025-11-09T14:21:40-08:00.nvim  lab8.c.2025-11-09T13:58:04-08:00.hash  lab8.c.2025-11-09T13:58:04-08:00.nvim  lab8.c.2025-11-09T14:02:29-08:00.hash  lab8.c.2025-11-09T14:16:52-08:00.hash  lab8.c.2025-11-09T14:16:52-08:00.nvim  lab8.c.2025-11-09T14:29:30-08:00.nvim  lab8.c.2025-11-09T14:38:06-08:00.hash  lab8.c.2025-11-09T14:38:06-08:00.nvim  lab8.c.2025-11-09T14:39:00-08:00.hash  lab8.c.2025-11-09T14:43:06-08:00.hash  lab8.c.2025-11-09T14:43:06-08:00.nvim  lab8.c.2025-11-09T14:50:31-08:00.hash  lab8.c.2025-11-09T14:50:31-08:00.nvim  lab8.c.2025-11-09T14:51:23-08:00.hash  lab8.c.2025-11-09T14:51:23-08:00.nvim  lab8.c.2025-11-09T14:51:58-08:00.hash  lab8.c.2025-11-09T14:55:21-08:00.nvim
(+25 files in other folders)
